fix flags and add localisation

--- a/localisation/countries_l_russian.yml
+++ b/localisation/countries_l_russian.yml
@@ -32,6 +32,38 @@
  ELF_neutrality_ADJ:0 "Авторитарный Ф"
  ELF_collectivism_ADJ:0 "Единый ЛФ"
  
+ CHE_fascism:0 "Чеченская Республика Ичкерия"
+ CHE_communism:0 "Чеченская Республика Ичкерия"
+ CHE_democratic:0 "Чеченская Республика Ичкерия"
+ CHE_neutrality:0 "Чеченская Республика Ичкерия"
+ CHE_collectivism:0 "Чеченская Республика Ичкерия"
+ CHE_fascism_DEF:0 "Чеченская Республика Ичкерия"
+ CHE_communism_DEF:0 "Чеченская Республика Ичкерия"
+ CHE_democratic_DEF:0 "Чеченская Республика Ичкерия"
+ CHE_neutrality_DEF:0 "Чеченская Республика Ичкерия"
+ CHE_collectivism_DEF:0 "Чеченская Республика Ичкерия"
+ CHE_fascism_ADJ:0 "Чеченцы"
+ CHE_communism_ADJ:0 "Чеченцы"
+ CHE_democratic_ADJ:0 "Чеченцы"
+ CHE_neutrality_ADJ:0 "Чеченцы"
+ CHE_collectivism_ADJ:0 "Чеченцы"
+ 
+ RNR_fascism:0 "Российская Националистическая Русь"
+ RNR_communism:0 "СССР"
+ RNR_democratic:0 "Россия"
+ RNR_neutrality:0 "РФ"
+ RNR_collectivism:0 "СССР"
+ RNR_fascism_DEF:0 "Российская Националистическая Русь"
+ RNR_communism_DEF:0 "СССР"
+ RNR_democratic_DEF:0 "Россия"
+ RNR_neutrality_DEF:0 "Чеченская Республика Ичкерия"
+ RNR_collectivism_DEF:0 "СССР"
+ RNR_fascism_ADJ:0 "Русские"
+ RNR_communism_ADJ:0 "Русские"
+ RNR_democratic_ADJ:0 "Русские"
+ RNR_neutrality_ADJ:0 "Русские"
+ RNR_collectivism_ADJ:0 "Русские"
+
  DNR_fascism:0 "Донецкая Народная Республика"
  DNR_fascism_DEF:0 "Донецкая Народная Республика"
  DNR_collectivism_DEF:0 "ДНР коммуна"
