--- a/localisation/tech/buffer.txt
+++ b/localisation/tech/buffer.txt
@@ -1,18 +1,15 @@
- LNR_fascism:0 "Луганская Народная Республика"
- LNR_fascism_DEF:0 "Луганская Народная Республика"
- LNR_collectivism_DEF:0 "ЛНР коммуна"
- LNR_collectivism:0 "ЛНР коммуна"
- LNR_collectivism_ADJ:0 "ЛНРск."
- LNR_democratic:0 "Луганская Народная Республика"
- LNR_democratic_DEF:0 "Луганская Народная Республика"
- LNR_neutrality:0 "Луганская Народная Республика"
- LNR_neutrality_DEF:0 "Луганская Народная Республика"
- LNR_communism:1 "Луганская Народная социалистическая республика"
- LNR_communism_DEF:1 "Луганская Народная социалистическая республика"
- LNR_fascism_ADJ:0 "ЛНРск."
- LNR_democratic_ADJ:0 "ЛНРск."
- LNR_neutrality_ADJ:0 "ЛНРск."
- LNR_communism_ADJ:0 "ЛНРск."
- LNR:0 "ЛНР"
- LNR_DEF:0 "ЛНР"
- LNR_ADJ:0 "ЛНРск."
+RNR_fascism:0 "Российская Националистическая Русь"
+RNR_communism:0 "СССР"
+RNR_democratic:0 "Россия"
+RNR_neutrality:0 "РФ"
+RNR_collectivism:0 "СССР"
+RNR_fascism_DEF:0 "Российская Националистическая Русь"
+RNR_communism_DEF:0 "СССР"
+RNR_democratic_DEF:0 "Россия"
+RNR_neutrality_DEF:0 "Чеченская Республика Ичкерия"
+RNR_collectivism_DEF:0 "СССР"
+RNR_fascism_ADJ:0 "Русские"
+RNR_communism_ADJ:0 "Русские"
+RNR_democratic_ADJ:0 "Русские"
+RNR_neutrality_ADJ:0 "Русские"
+RNR_collectivism_ADJ:0 "Русские"
