--- a/localisation/countries_l_russian.yml
+++ b/localisation/countries_l_russian.yml
@@ -35,6 +35,7 @@
  CHE_fascism:0 "Чеченская Республика Ичкерия"
  CHE_communism:0 "Чеченская Республика Ичкерия"
  CHE_democratic:0 "Чеченская Республика Ичкерия"
+ CHE_ismamism:0 "Чеченская Республика Ичкерия"
  CHE_neutrality:0 "Чеченская Республика Ичкерия"
  CHE_collectivism:0 "Чеченская Республика Ичкерия"
  CHE_fascism_DEF:0 "Чеченская Республика Ичкерия"
@@ -42,10 +43,12 @@
  CHE_democratic_DEF:0 "Чеченская Республика Ичкерия"
  CHE_neutrality_DEF:0 "Чеченская Республика Ичкерия"
  CHE_collectivism_DEF:0 "Чеченская Республика Ичкерия"
+ CHE_ismamism_DEF:0 "Чеченская Республика Ичкерия"
  CHE_fascism_ADJ:0 "Чеченцы"
  CHE_communism_ADJ:0 "Чеченцы"
  CHE_democratic_ADJ:0 "Чеченцы"
  CHE_neutrality_ADJ:0 "Чеченцы"
+ CHE_ismamism_ADJ:0 "Чеченцы"
  CHE_collectivism_ADJ:0 "Чеченцы"
  
  RNR_fascism:0 "Российская Националистическая Русь"
