Add Russian Republic

--- a/localisation/countries_l_russian.yml
+++ b/localisation/countries_l_russian.yml
@@ -32,6 +32,22 @@
  ELF_neutrality_ADJ:0 "Авторитарный Ф"
  ELF_collectivism_ADJ:0 "Единый ЛФ"
  
+ RRP_fascism:0 "Национальное Русское государство"
+ RRP_communism:0 "РСФСР"
+ RRP_democratic:0 "Российская Республика"
+ RRP_neutrality:0 "Российская федерация"
+ RRP_collectivism:0 "РСФСР"
+ RRP_fascism_DEF:0 "РРДРАУФ"
+ RRP_communism_DEF:0 "ЕЛФ"
+ RRP_democratic_DEF:0 "РР"
+ RRP_neutrality_DEF:0 "РФ"
+ RRP_collectivism_DEF:0 "РСФСР"
+ RRP_fascism_ADJ:0 "Русская республика для русских АУФ"
+ RRP_communism_ADJ:0 "РСФСР"
+ RRP_democratic_ADJ:0 "Российская Республика"
+ RRP_neutrality_ADJ:0 "РФ"
+ RRP_collectivism_ADJ:0 "ЕЛ Фракция"
+ 
  CHE_fascism:0 "Чеченская Республика Ичкерия"
  CHE_communism:0 "Чеченская Республика Ичкерия"
  CHE_democratic:0 "Чеченская Республика Ичкерия"
