--- a/localisation/tech/buffer.txt
+++ b/localisation/tech/buffer.txt
@@ -1,15 +1,15 @@
-RNR_fascism:0 "Российская Националистическая Русь"
-RNR_communism:0 "СССР"
-RNR_democratic:0 "Россия"
-RNR_neutrality:0 "РФ"
-RNR_collectivism:0 "СССР"
-RNR_fascism_DEF:0 "Российская Националистическая Русь"
-RNR_communism_DEF:0 "СССР"
-RNR_democratic_DEF:0 "Россия"
-RNR_neutrality_DEF:0 "Чеченская Республика Ичкерия"
-RNR_collectivism_DEF:0 "СССР"
-RNR_fascism_ADJ:0 "Русские"
-RNR_communism_ADJ:0 "Русские"
-RNR_democratic_ADJ:0 "Русские"
-RNR_neutrality_ADJ:0 "Русские"
-RNR_collectivism_ADJ:0 "Русские"
+RRP_fascism:0 "Национальное Русское государство"
+RRP_communism:0 "РСФСР"
+RRP_democratic:0 "Российская Республика"
+RRP_neutrality:0 "Российская федерация"
+RRP_collectivism:0 "РСФСР"
+RRP_fascism_DEF:0 "РРДРАУФ"
+RRP_communism_DEF:0 "ЕЛФ"
+RRP_democratic_DEF:0 "РР"
+RRP_neutrality_DEF:0 "РФ"
+RRP_collectivism_DEF:0 "РСФСР"
+RRP_fascism_ADJ:0 "Русская республика для русских АУФ"
+RRP_communism_ADJ:0 "РСФСР"
+RRP_democratic_ADJ:0 "Российская Республика"
+RRP_neutrality_ADJ:0 "РФ"
+RRP_collectivism_ADJ:0 "ЕЛ Фракция"
