--- a/localisation/state_names_l_russian.yml
+++ b/localisation/state_names_l_russian.yml
@@ -215,7 +215,7 @@
  STATE_214:0 "Архангельск"
  STATE_215:0 "Онега"
  STATE_216:0 "Олонец"
- STATE_217:0 "Сталинград"
+ STATE_217:0 "Волгоградская область"
  STATE_218:0 "Ростов"
  STATE_219:0 "Московская область"
  STATE_220:0 "Курск"
