--- a/localisation/victory_points_l_russian.yml
+++ b/localisation/victory_points_l_russian.yml
@@ -204,7 +204,8 @@
  VICTORY_POINTS_7394:0 "Корк"
  VICTORY_POINTS_6380:0 "Москва"
  VICTORY_POINTS_525:0 "Киев"
- VICTORY_POINTS_3529:0 "Сталинград"
+ VICTORY_POINTS_3529:0 "Волгоград"
+ VICTORY_POINTS_11474:0 "Волжский"
  VICTORY_POINTS_3151:0 "Санкт-Петербург"
  VICTORY_POINTS_6474:0 "Донецк"
  VICTORY_POINTS_9417:0 "Ростов"
