--- a/localisation/parties_l_russian.yml
+++ b/localisation/parties_l_russian.yml
@@ -4,6 +4,16 @@
  collectivism_desc:0 "Коллективисский режим"
  collectivismo:0 "Классический коллективизм"
  collectivismo_desc:0 "Коллективизм - идеалогия, похожая на коммунизм, ставящая цели разбить государство на комунны, которые будут управлятся ГК (Главный Комунны) и ГУ (Главный Управляющий). При этом, экономическая модель - социалистическая."
+ 
+ ismamism:0 "Исламизм"
+ ismamism_noun:0 "Исламизм"
+ 
+ radikal:0 "Радикальный исламизм"
+ ymerennii:0 "Умеренный исламизм"
+ 
+ radikal_desc:0 "Радикальный ислам - военное распространение ислама"
+ ymerennii_desc:0 "Целью умеренного исламизма является (нужное подчеркнуть) верие в ислам, мирное распростанение взглядов и т.д"
+ 
  anarchocollectivismo:0 "Анархо-коллективизм"
  anarchocollectivismo_desc:0 "Анархо-коллективизм - идеалогия, похожая на коммунизм, ставящая цели разбить государство на комунны, которые будут в самоуправлении. При этом, экономическая модель - коммунистическая."
  communism:0 "Коммунизм"
@@ -54,6 +64,32 @@
  centrism_desc:1 "Центризм - форма правления, при которой стараются принимать разумные решения, отвечающие текущим и будущим запросам нации, не подрывающие доверие общества и служащие общему благу с учетом рисков и контекста этих запросов."
  anarchism:0 "Анархизм"
  anarchism_desc:0 "Анархизм — отторжение всякой власти. Он пропагандирует разделение сообщества на самоуправляемые коллективы внутри единого централизованного государства."
+ 
+ #ЕЛФ
+ ELF_collectivism_party:0 "ЦКРТР"
+ ELF_collectivism_party_long:0 "Центральный комитет по революциии на территории России"
+ #РНР
+ RNR_fascism_party:0 "ЦРП"
+ RNR_fascism_party_long:0 "Центральная Русская Партия"
+ #РР
+ RRP_fascism_party:0 "ЦЛПР"
+ RRP_fascism_party_long:0 "Центральная Либеральная Партия России"
+ #Хохлы Слуга народа
+ UKR_democratic_party:0 "Слуга народа"
+ UKR_democratic_party_long:0 "Партия Слуга народа"
+ #Чечня
+ CHE_ismamism_party:0 "РИЦ"
+ CHE_ismamism_party_long:0 "Радикальная Исламисткий Централь"
+ #данбасс, луганск и крiм
+ LNR_neutrality_party:0 "ОД \"ЛР\""
+ LNR_neutrality_party:0 "Общественное движение Луганская Республика"
+ 
+ DNR_neutrality_party:0 "ОД \"ДР\""
+ DNR_neutrality_party:0 "Общественное движение Донецкая Республика"
+ 
+ CRM_neutrality_party:0 "ОД \"КР\""
+ CRM_neutrality_party:0 "Общественное движение Крымская Республика"
+ 
  GER_fascism_party:0 "НСДАП"
  GER_fascism_party_long:0 "Национал-социалистическая немецкая рабочая партия"
  GER_communism_party:0 "Коммунистическая партия Германии"
