--- a/localisation/ideas_l_russian.yml
+++ b/localisation/ideas_l_russian.yml
@@ -1,5 +1,14 @@
 ﻿l_russian:
  fascist_influence:0 "Влияние фашизма"
+ #МОД ЕПТ
+ vlastn_prop:0 "Пропаганда власти"
+ war_prop:0 "Военная пропаганда"
+ collectivismi:0 "Пропаганда коллективизма"
+ liberaha:0 "Пропаганда демократии"
+ nazi:0 "Пропаганда фашизма"
+ 
+ 
+ #КОНЕЦ МОДА ЕПТ
  fascist_influence_desc:0 "Влияние фашизма сделало эту идеологию чрезвычайно популярной, и страна охотнее поддержит другие фашистские государства."
  communist_influence:0 "Влияние коммунизма"
  communist_influence_desc:0 "Влияние коммунизма сделало эту идеологию чрезвычайно популярной, и страна охотнее поддержит другие коммунистические государства."
