--- a/localisation/ideas_l_russian.yml
+++ b/localisation/ideas_l_russian.yml
@@ -7,6 +7,8 @@
  liberaha:0 "Пропаганда демократии"
  nazi:0 "Пропаганда фашизма"
  
+ promedol_op_nark:0 "Опиатная наркомания в армии"
+ promedol_op_nark_desk:0 "В данной стране, в армии, плохо ведётся учёт наркотических анельгетиков, что не могло не повлиять на боеспособность армии."
  
  #КОНЕЦ МОДА ЕПТ
  fascist_influence_desc:0 "Влияние фашизма сделало эту идеологию чрезвычайно популярной, и страна охотнее поддержит другие фашистские государства."
