--- a/localisation/ideas_l_russian.yml
+++ b/localisation/ideas_l_russian.yml
@@ -8,8 +8,10 @@
  nazi:0 "Пропаганда фашизма"
  
  promedol_op_nark:0 "Опиатная наркомания в армии"
- promedol_op_nark_desk:0 "В данной стране, в армии, плохо ведётся учёт наркотических анельгетиков, что не могло не повлиять на боеспособность армии."
+ promedol_op_nark_desc:0 "В данной стране, в армии, плохо ведётся учёт наркотических анельгетиков, что не могло не повлиять на боеспособность армии."
  
+ panslavanizm:0 "Панславизм"
+ panslavanizm_desc:0 "Многие годы нация славян была раздробленна и угнетаема другими государствами. Пришло время освободить всю славянскую нацию от иностранного рабства и создать новое, великое объединение славянских народов."
  #КОНЕЦ МОДА ЕПТ
  fascist_influence_desc:0 "Влияние фашизма сделало эту идеологию чрезвычайно популярной, и страна охотнее поддержит другие фашистские государства."
  communist_influence:0 "Влияние коммунизма"
