--- a/localisation/focus_l_russian.yml
+++ b/localisation/focus_l_russian.yml
@@ -2288,9 +2288,27 @@
  UKR_org_desc:1 "Мы пережили многое в промежутке между 2013 и 2016, нам пора вернуть территории, ибо такой великий шанс бывает крайне редко! Для начала данного тернистого путя, нам надо организоватся."
  UKR_ato_crimea:1 "АТО на территории южного Крыма"
  UKR_ato_crimea_desc:1 "В конце 2020 года, когда режим Путина упал, Крым был возвращён Украине. Однако, 2 месяцами спустя, пророссийские и прочие люди организовали там незаконную республику. Что бы вернуть контроль над югом, нам нужно, к сожалению, развязать войну с непризнанными сепаратистами."
+ UKR_ato_wosotk:1 "Вернуть Восток"
+ UKR_ato_wosotk_desc:0 "Благодаря активной поддержки со стороны России Луганская Народная Республика и Донецкая Народная Республика держались так долго, но Россия погрязла в пучине войн и это идеальный шанс для возвращения украденного.
+ UKR_armyorg:1 "Реорганизация армии"
+ UKR_armyorg_desc:1 "Из-за длительного кризиса и высокого уровня коррупции наша армия пришла в негодность, но настало новое время и открылись новые возможности. Пришло время снова нарастить былую мощь!
  
  
- 
- 
+ ELF_opol:1 "Гражданское революционное ополчение"
+ ELF_opol_desc:1 "Проводить анти-правительственные мероприятия, митинги и привлекать на нашу сторону новых сторонников идей коллективизма необходимо, но чтобы мы могли действительно показать нашу силу и набрать большой вес в политике нам нужна сила - этой силой станут военизированные отряды ЕЛФ."
+ ELF_agit:1 "Агитационные мероприятия"
+ ELF_agit_desc:1 "Формирование отрядов проходит успешно, поступают добровольцы и наши силы растут, теперь наконец-то появялется охрана на наших мероприятиях. Но людей всё ещё недостаточно, нам нужно средство устрашения поэтому стоит заняться привлечением новых человек в наши ряды."
+ ELF_osnas:1 "Оснащение отрядов"
+ ELF_osnas_desc:1 "Может у нас и появляются новые добрвольцы, однако без оружия и оснащения они бесполезны. Нам необходимо наладить связи с поставщиками оружия и военного оснащения."
+ ELF_bunt1:1 "Подтолкнуть людей на действия"
+ ELF_bunt1_desc:1 "Мы обязаны открыть глаза людям на нынешнее положение дел. Необходимо чтобы все рабочие осознали, что текущий строй ущемляет их как людей. Некоторое утрирование не возбраняется..."
+ ELF_bunt2:1 "Сибирская рабочая стачка"
+ ELF_bunt2_desc:1 "Люди наконец выходят на улицы своих городов и начинают напоминать кто держит на плаву практически всю экономику страны. И мы как раз имеем все ресурсы чтобы лучше подготовить протестующих." 
+ ELF_bund:1 "Воспользоваться моментом"
+ ELF_bund_desc:1 "Вот наш момент и настал! Беспорядки на улицах, тысячи митингующих людей это идеальная возможность начать революцию, то к чему мы так долго стремились."
+ ELF_ord:1 "Союз с ОРД"
+ ELF_ord_desc:1 "Хотя мы и имеем большое влияние и ещё большие ресурсы для осуществления революция этого по-прежнему недостаточно. У нас есть возможность заиметь неплохих союзников, этим можно воспользоваться."
+ ELF_ordnet:1 "Мы - единственная надежда"
+ ELF_ordnet_desc:1 "У нас появились возможности осуществить великую освободительную революцию России и мы не должны упускать этот шанс. Союзники нам будут только вставлять палки в колёса, а их общая цель в свержении действующей власти лишь ширма за которой скрываются ещё более жестокие узурпаторы!"
  
  
