--- a/localisation/ideas_l_russian.yml
+++ b/localisation/ideas_l_russian.yml
@@ -12,6 +12,15 @@
  
  panslavanizm:0 "Панславизм"
  panslavanizm_desc:0 "Многие годы нация славян была раздробленна и угнетаема другими государствами. Пришло время освободить всю славянскую нацию от иностранного рабства и создать новое, великое объединение славянских народов."
+ 
+ oscoloc:0 "Осколок гражданской войны"
+ oscoloc_desc:0 "После достижения главной цели и без того разрозненный ОРД окончательно распался, тем самым предзноменовав более чудовищное развитие второй гражданской войны в России. Вернее на её останках."
+ 
+ nas_ussr:0 "Наследник СССР"
+ nas_ussr_desc:0 "Развал Советского Союза повлёк за собой глубокий кризис и начало псевдолиберальной Путинской диктатуры. Но мы как наследники СССР сможем снова привести Россию к величию и достичь Великого социалистического будущего!"
+ 
+ molodoye_gos_ua:0 "Молодое государство"
+ molodoye_gos_ua_desc:0 "Данное государство недавно отделилось от других стран. Оно очень молодое и имеет довольно мутные перспективы."
  #КОНЕЦ МОДА ЕПТ
  fascist_influence_desc:0 "Влияние фашизма сделало эту идеологию чрезвычайно популярной, и страна охотнее поддержит другие фашистские государства."
  communist_influence:0 "Влияние коммунизма"
