--- a/localisation/parties_l_russian.yml
+++ b/localisation/parties_l_russian.yml
@@ -79,8 +79,8 @@
  UKR_democratic_party_long:0 "Партия Слуга народа"
  #Чечня
  CHE_ismamism_party:0 "РИЦ"
- CHE_ismamism_party_long:0 "Радикальная Исламисткий Централь"
- #данбасс, луганск и крiм
+ CHE_ismamism_party_long:0 "Радикальный Исламисткий Централь"
+ #донбасс, луганск и крiм
  LNR_neutrality_party:0 "ОД \"ЛР\""
  LNR_neutrality_party:0 "Общественное движение Луганская Республика"
  
